# markdone

./: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
.github/workflows/: test.yml
src/: App.tsx  app.html  service-worker.js  service-worker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: Toolbar.svelte  View.svelte
src/routes/: +page.svelte
src/test/: utils.test.tsx  utils.tsx
static/: site.webmanifest
