[package]
name = "markdone"
version = "0.1.0"
description = "Get more work done with Markdone!"
authors = ["John Carlo Austria <cpe.austria.johncarlo@gmail.com>"]
license = "GPL-3.0+"
repository = "https://github.com/jaycedotbin/markdone"
default-run = "markdone"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.0", features = [] }
pulldown-cmark = { version = "0.9.2", default-features = false }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
